--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.12.0",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
+    "okto-sdk-react": "^0.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
