--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ colorzero==2.0
 cytoolz==1.0.0
 distro==1.9.0
 Django==5.1.3
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 eth-account==0.13.4
 eth-hash==0.7.0
