--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.12.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.462.0",
